html website intro

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>recipe finder</title>
 </head>
 <body>
-  
+  <div class = "container">
+    <div class = "meal-wrapper" id="meal-wrap">
+      <div class = "meal-search">
+        <h1 class="top-title">Mordern Kitchen</h1>
+        <h2 class = "title">Find Meals As Per Your Ingredients</h2>
+        <blockquote>Two key ingredients in any successful chef —a quick learner and someone with a sharp brain.<br>
+          <cite>- Gordon Ramsay</cite>
+        </blockquote>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
