meal recipe result

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <blockquote>Two key ingredients in any successful chef —a quick learner and someone with a sharp brain.<br>
           <cite>- Gordon Ramsay</cite>
         </blockquote>
+        <!--seach section-->
         <div class = "meal-search-box">
           <input type = "text" class = "search-control" placeholder="Enter an ingredient" id = "search-input">
           <button type = "submit" class = "search-btn btn" id = "search-btn">
@@ -24,7 +25,7 @@
           </button>
         </div>
       </div>
-
+      <!--search results section-->
       <div class = "meal-result">
         <h2 class = "title">Your Search Results:</h2>
         <div id= "meal">
@@ -39,6 +40,28 @@
             </div>
           </div>
           <!-- end of meal item -->
+        </div>
+      </div>
+
+      <!--meal results pop-up-->
+      <div class = "meal-details">
+        <!-- recipe close btn -->
+        <button type = "button" class = "btn recipe-close-btn" id = "recipe-close-btn">
+          <i class = "fas fa-times"></i>
+        </button>
+
+        <!-- meal content -->
+        <div class = "meal-details-content">
+          <h2 class = "recipe-title">Meals Name Here</h2>
+          <p class = "recipe-category">Category Name</p>
+          <div class = "recipe-instruct">
+            <h3 class="recipe-instruct">Procedure:</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo blanditiis quis accusantium natus! Porro, reiciendis maiores molestiae distinctio veniam ratione ex provident ipsa, soluta suscipit quam eos velit autem iste!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam voluptatibus ad obcaecati magnam, esse numquam nisi ut adipisci in?</p>
+          </div>
+          <div class = "recipe-meal-img">
+            <img src = "./lidye-1Shk_PkNkNw-unsplash.jpg" alt = "">
+          </div>
         </div>
       </div>
 
