--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class="top-title">M<span>order</span>n K<span>it</span>chen</h1>
         <h2 class = "title">Find Meals As Per Your Ingredients</h2>
         <blockquote>Two key ingredients in any successful chef —a quick learner and someone with a sharp brain.<br>
-          <cite>- Gordon Ramsay</cite>
+          <cite>- _d@n_</cite>
         </blockquote>
         <!--seach section-->
         <div class = "meal-search-box">
